content services code cleanup